# golem

./: .cproject  .gitignore  .project  README.md  _main.c_  generate.py  golem.c  golem.glm  golem.h  golem.lang  golemenums.c  golemenums.h  golemerror.c  golemerror.h  golemvalue.h  main.c  main.c_  make.sh  meson.build  mydb.db
Debug/: golem  main.d  makefile  objects.mk  sources.mk  subdir.mk
Debug/engine/: golem.d  golemblock.d  golembuilderclass.d  golembuilderclosure.d  golembuilderextern.d  golemclass.d  golemclosure.d  golemcompiled.d  golemconstant.d  golemcontext.d  golemdebugobject.d  golemdeclaration.d  golemerror.d  golemexpresion.d  golemexpression.d  golemexpressioncomplex.d  golemfunc.d  golemidentificator.d  golemif.d  goleminvoke.d  golemjit.d  golemllm.d  golemmember.d  golemnew.d  golemparser.d  golemsentence.d  golemsharedobject.d  golemstatement.d  golemtypeinfo.d  golemutils.d  golemvm.d  subdir.mk
builtin/: golemiterable.c  golemiterable.h
compile/: golemblock.c  golemblock.h  golemcall.c  golemcall.h  golemconditional.h  golemconst.c  golemconst.h  golemexpression.c  golemexpression.h  golemfunctionbuilder.h  golemgsvar.c  golemmodulebuilder.h  golemnegative.c  golemnegative.h  golemnot.c  golemnot.h  golemparser.c  golemparser.h  golemreturn.c  golemreturn.h  golemscopebuilder.c  golemscopebuilder.h  golemstatement.c  golemstatement.h  golemsymbol.c  golemsymbol.h  golemsymbolentry.c  golemsymbolentry.h  golemtypebuilder.h  golemtypewrapper.h  golemvar.c  golemvar.h
compile/expr/: golemaccessor.c  golemaccessor.h  golemcall.c  golemconst.c  golemconst.h  golemcontext.c  golemcontext.h  golemneg.c  golemneg.h  golemnegative.c  golemnot.c
engine/: golem.c  golem.h  golemblock.c  golemblock.h  golemboxed.h  golembuilderclass.c  golembuilderclass.h  golembuilderclosure.c  golembuilderclosure.h  golembuilderextern.c  golembuilderextern.h  golembuilderfunc.h  golembuilderfunction.c  golembuilderfunction.h  golembuilderstruct.c  golembuilderstruct.h  golembuiltin.c  golembuiltin.h  golembuiltininfo.c  golembuiltininfo.h  golemcinvoke.c  golemcinvoke.h  golemclass.h  golemclassinfo.c  golemclassinfo.h  golemclosure.c  golemclosure.h  golemcompiled.c  golemcompiled.h  golemconstant.c  golemconstant.h  golemcontext.c  golemcontext.h  golemdebugobject.c  golemdebugobject.h  golemdeclaration.c  golemdeclaration.h  golemerror.c  golemerror.h  golemexpresion.c  (+51 more)
examples/: main.glm
examples/addressbook/: addressbook.glm
examples/addressbook/repository/: gtk.glm  sqlite3.glm
metadata/: golemattribute.c  golemattribute.h  golemclass.h  golemfield.h  golemfunction.c  golemfunction.h  goleminterface.h  golemmarshall.h  golemmember.c  golemmember.h  golemmetadata.c  golemmetadata.h  golemmodule.c  golemmodule.h  golemmodulemanager.c  golemmodulemanager.h  golemprimitive.c  golemprimitive.h  golemproperty.h  golemstruct.h  golemtype.c  golemtype.h
metadata/function/: golemfunctionwrap.c  golemfunctionwrap.h  golemsymbol.c  golemsymbol.h
module/: golemmodule.c  golemmodule.h  golemobjectinfo.h  golemstructinfo.h  golemsymbol.h  golemsymbolinfo.c  golemsymbolinfo.h  golemtypeinfo.h  golemtypemodule.c  golemtypemodule.h
runtime/: golembind.h  golemboundfunc.c  golemboundfunc.h  golemcallable.c  golemcallable.h  golemerror.h  golemfunction.c  golemfunction.h  golemfunctionbind.h  golemfunctioninfo.c  golemfunctioninfo.h  golemfunctionlambda.h  golemfunctiontype.c  golemfunctiontype.h  golemfunctionwrap.c  golemfunctionwrap.h  golemfundamentaltype.h  goleminvokable.h  golemlambda.h  golemlambdafunc.c  golemlambdafunc.h  golemmarshal.c  golemmarshal.h  golemmetadata.c  golemmetadata.h  golemsource.c  golemsource.h  golemsymbol.c  golemsymbol.h  golemtype.h  golemtypeinfo.h  golemtypemodule.c  golemtypemodule.h
vm/: golemvm.c  golemvm.h
